[tool.poetry]
name = "iapple"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.1.1"
APScheduler = "^3.10.0"
aiosqlite3 = "^0.3.0"
discord = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
